// Run protoc --go_out=plugins=grpc:. *.proto to generate the .pb.go from 
// with the directory that contains the proto file
syntax="proto3";
package interact;

service GruQuiz {
	rpc Authenticate (Token) returns (Session) {}
	rpc GetQuestion (Req) returns (Question) {}
	rpc SendAnswer (Response) returns (Status) {}
	rpc StreamChan (stream ClientStatus) returns (stream ServerStatus) {}
//	rpc StreamChanClient (stream ClientStatus) returns (stream ServerStatus) {}
}

message ServerStatus {
	string timeLeft = 1;
	string status = 2;
}

message ClientStatus {
	string currQuestion = 1;
	string token = 2;
}

message Token {
	string id = 1;
}

message Quiz {
	enum state {
		DEMO_NOT_TAKEN = 0;
		DEMO_STARTED = 1;
		TEST_NOT_TAKEN = 2;
		TEST_STARTED = 3;
		TEST_FINISHED = 4;
	}
}

message Session {
	string id = 1;
	Quiz.state state = 2;
}

message Req {
	bool repeat = 1;
	string sid = 2;
	string token = 3;
}

message Question {
	string id = 1;
	string str = 2;
	repeated Answer options = 3;
	bool isMultiple = 4;
	float positive = 6;
	float negative = 7;
	float totscore = 8;
}

message Answer {
	string id = 1;
	string str = 2;
}

message Response {
	string qid = 1;
	repeated string aid = 2;
	string sid = 3;
	string token = 4;
}

message Status {
	int64 status = 1; // 0 - end test | 1 - right answer | 2 - wrong answer
}

